Fix alignment

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -171,8 +171,6 @@ input[type="color"]:focus,
 }
 
 .form-check-input {
-    vertical-align: sub;
-  
     &:disabled {
         opacity: initial;
     }
@@ -180,8 +178,7 @@ input[type="color"]:focus,
 
 .task-font {
     font-size: 16px;
-    vertical-align: top;
-    
+
     img {
         width: 100%;
         border-radius: 5px;
